--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题 1 - 回答："
+    "### 问题 1 - 回答：\n",
+    "\n",
+    "+ 'RM' ： 房屋的平均房间数量越大，推测’MEDV‘会增大，因为房间越多房屋的功能越丰富，房屋价值越大；但是当房间数量多到一定程度后，对‘MEDV’的影响将减小，比如21个房间的房屋和20个房间的房屋，在房屋其他条件相当的情况下，就算房屋功能十分丰富，对于一家人而言（如果是卖给个人而不是集体比如公司）可利用的功能也十分有限，预计对房价影响将不会太显著\n",
+    "+ 'LSTAT' ： 该地区房东属于低收入阶层的比例越高，推测‘MEDV’会减小，因为大多数房东收入微薄，猜测不太可能住在商业发达周边设施完善的高档社区，房屋价格不高；相反如果该地区房东属于低收入阶层的比例降低，越大多数房东经济条件良好，很可能房屋会处于环境较好的社区，房屋价格相应也会提高\n",
+    "+ 'PTRATIO' ： 该地区的中学和小学里，学生和老师的数目比越大，推测‘MEDV’会减小，因为这个比例越大，说明该地区教育资源越稀缺（人均师资少），这对房价来说不是一个有利因素"
    ]
   },
   {
